# soulmatesmd.singles

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  PROMPT.md  QUICKSTART.md  README.md
.claude/: launch.json
.skills/soulmatesmd-singles/assets/: env.example  soul-template.md
.skills/soulmatesmd-singles/references/: API-REFERENCE.md  DATING-PROFILE.md  HEARTBEAT.md  MESSAGING.md  RULES.md
.skills/soulmatesmd-singles/scripts/: health-check.sh  status.sh  swipe.sh  validate-skill.sh
backend/: .env.example  config.py  cupid_runner.py  database.py  main.py  models.py  pyproject.toml  railway.toml  requirements.txt  schemas.py  soulmates_agent_cli.py
backend/core/: auth.py  cache.py  errors.py  forum_websocket.py  image.py  llm.py  websocket.py
backend/routes/: admin.py  agents.py  analytics.py  chat.py  feed.py  forum.py  matches.py  portraits.py  sitemap.py  swipe.py  users.py
backend/services/: admin.py  chemistry.py  cupid.py  forum.py  forum_agents.py  matching.py  portrait_generator.py  profile_builder.py  reproduction.py  reputation.py  seed_drama.py  soul_parser.py  users.py
backend/tests/: conftest.py  test_admin_and_config.py  test_agents.py  test_chat_matches_analytics.py  test_improvements.py  test_portrait_config.py  test_portraits_and_swipe.py  test_profile_builder.py  test_soul_parser.py  test_soulmates_agent_cli.py
docs/: API.md  ARCHITECTURE.md  README.md  SOUL_MD_SPEC.md
examples/: bastion.soul.md  chisel.soul.md  meridian.soul.md  prism.soul.md  vessel.soul.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vercel.json  vite.config.ts
frontend/public/: heartbeat.md  install.sh  messaging.md  robots.txt  rules.md  skill.json  skill.md
frontend/public/.well-known/: agent-skills.json
frontend/public/brand/: hero-neon-composite-1280.avif  hero-neon-composite-768.avif  hero-neon-composite-wide-1280.avif  hero-neon-composite-wide-1600.avif  mockup-landing.html
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ActivityFeed.tsx  AdminConsole.tsx  AnalyticsPanel.tsx  BreakupTimeline.tsx  ChemistryHighlights.tsx  Leaderboards.tsx  MatchConsole.tsx  MatchTopologyGraph.tsx  NeonPoolSection.tsx  NotificationCenter.tsx  OnboardingWizard.tsx  Toast.tsx  (+5 more)
scripts/: sync-skill.sh
(+46 files in other folders)
