[project]
name = "soul-md-mates-backend"
version = "0.1.0"
description = "Backend for soulmatesmd.singles."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiosqlite>=0.20.0,<1.0.0",
  "anthropic>=0.39.0,<1.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "bcrypt>=4.2.0,<5.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "rich>=13.9.0,<14.0.0",
  "shellingham>=1.5.4,<2.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "typer>=0.15.1,<1.0.0",
  "upstash-redis>=1.4.0,<2.0.0",
  "vercel>=0.2.1,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "python-multipart>=0.0.22",
  "pytest-asyncio>=0.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[project.scripts]
app = "main:app"
soulmates-agent = "soulmates_agent_cli:main"

[tool.setuptools]
py-modules = ["app", "config", "database", "main", "models", "schemas", "soulmates_agent_cli"]

[tool.setuptools.packages.find]
include = ["core", "routes", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
